Label: fix manage overflow button position and cut-off
Hint Popover: remove padding that should be set via padded: true

--- a/public/cui.css
+++ b/public/cui.css
@@ -1697,20 +1697,20 @@ a[role="button"].cui-button-appearance-link {
   position: relative;
   display: block; }
   .cui-label-manage-overflow.cui-label--measure-overflow > .cui-label-content {
-    max-height: 131px; }
+    max-height: 126px; }
   .cui-label-manage-overflow > .cui-label-content {
-    max-height: 99px;
+    max-height: 108px;
     overflow: hidden; }
   .cui-label-manage-overflow .cui-label-manage-overflow-button {
     position: absolute;
     right: 0;
-    bottom: 3px;
+    bottom: 0;
     background: linear-gradient(to right, rgba(255, 255, 255, 0), white 10px);
     padding: 0 0 0 10px !important; }
     .cui-label-manage-overflow .cui-label-manage-overflow-button .cui-button-visual {
       color: #006adb;
       height: auto;
-      padding: 0; }
+      padding: 0 0 1px; }
   .cui-label-manage-overflow.cui-label--show-overflow > .cui-label-content {
     max-height: none !important; }
   .cui-label-manage-overflow.cui-label--show-overflow .cui-label-manage-overflow-button {
@@ -2290,7 +2290,6 @@ a[role="button"].cui-button-appearance-link {
   max-width: 400px;
   background: #3d4f5c;
   color: white;
-  padding: 7px 10px;
   box-shadow: 0 4px 20px rgba(61, 79, 92, 0.4), 0 2px 4px rgba(0, 0, 0, 0.1); }
   .cui-hint-popover .cui-button-appearance-link[role] .cui-button-visual {
     color: #4c9ef6; }
